--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <span class="material-symbols-outlined" onclick="open_menu()">menu</span>
             </nav>
             <div class="code-bg">
-                <img src="style_imgs/bg-code-1.png">
+                <img src="style_imgs/bg-code-1.jpeg">
             <div class="header-text">
                 <h1>Welcome<br>To<br>My<br>Portofilo</h1>
             </div>
