--- a/index.html
+++ b/index.html
@@ -134,6 +134,19 @@
                         <a href="#"><box-icon type='logo' name='github' class="logo"></box-icon></a>
                     </div>
                 </div>
+                 <div class="work">
+                    <video src="project_imgs/tik-tak-toe-1.mp4" type="video/mp4" muted class="vid" loop></video>
+                    <p><span>Tik Tac Toe App</span></p>
+                    <div class="layer">
+                        <h3>Tik Tac Toe App</h3>
+                        <p>Created in: 2024</p>
+                        <p>React Native</p>
+                        <p>Time: 45 minutes</p>
+                        <p>Description: Tik tac toe game</p>
+                        <p></p>
+                        <a href="#"><box-icon type='logo' name='github' class="logo"></box-icon></a>
+                    </div>
+                </div>
                 <div class="work">
                     <video src="project_imgs/The_Time_Dynamic.mp4" type="video/mp4" muted class="vid" loop></video>
                     <p><span>Time Dynamic App</span></p>
