--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@
                     <p><span>Tik Tac Toe App</span></p>
                     <div class="layer">
                         <h3>Tik Tac Toe App</h3>
-                        <p>Created in: 2024</p>
+                        <p>Created in: 2023</p>
                         <p>React Native</p>
                         <p>Time: 45 minutes</p>
                         <p>Description: Tik tac toe game</p>
-                        <p></p>
+                        <p>With Android and Apple logos</p>
                         <a href="#"><box-icon type='logo' name='github' class="logo"></box-icon></a>
                     </div>
                 </div>
