--- a/index.html
+++ b/index.html
@@ -93,6 +93,19 @@
             <p>Hover over each tile for additional info<small>(for small screens, click)</small></p>
             <div class="project-list">
                 <div class="work">
+                    <video src="project_imgs/rn-todo-app-1.mp4" type="video/mp4" muted class="vid" loop></video>
+                    <p><span>React Native ToDo App</span></p>
+                    <div class="layer">
+                        <h3>React Native ToDo App</h3>
+                        <p>Created in: 2024</p>
+                        <p>React Native, Expo, Google Fonts</p>
+                        <p>Time: 50 minutes</p>
+                        <p>Description: ToDo list app</p>
+                        <p>User enters a task. Able edit and delete task.</p>
+                        <a href="#"><box-icon type='logo' name='github' class="logo"></box-icon></a>
+                    </div>
+                </div>
+                <div class="work">
                     <video src="project_imgs/orangeU-2.mp4" type="video/mp4" muted class="vid" loop></video>
                     <p><span>Orange You App</span></p>
                     <div class="layer">
