--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="code-bg">
                 <img src="style_imgs/bg-code-1.jpeg">
             <div class="header-text">
-                <h1>Welcome<br>To<br>My<br>Portofilo</h1>
+                <h1>Welcome<br>To<br>My<br>Portfolio</h1>
             </div>
             </div>
         </div>
